--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,1 +1,14 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: java-app-svc
+spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Cluster
+  selector:
+    app: java-app
+  ports:
+  - name: tcp-port
+    protocol: TCP
+    port: 80
+    targetPort: 8080
